# midi-archive-colab

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  requirements.txt
midi_archive/: .keep  MIDI_Archive_Colab_Starter(1).ipynb  MIDI_Archive_Colab_Starter.ipynb  README.md
scripts/: dedup.py
src/cli/: main.py
src/core/: config.py  logger.py
src/llm/: anthropic.py  huggingface.py  openai.py
src/midi/: __init__.py  dedup.py  midi_analysis.py  spotify_enrichment.py
src/realtime/: __init__.py  dispatcher.py  midi_handler.py  sensor_loop.py
tests/midi/: test_dedup.py
